fix: env. variable issue

--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,4 @@
 DB_CONNECTION_STRING=mongodb://admin:secret@localhost:27017/example-mern-stack-app?authSource=admin
-PORT=3001
+PORT=5002
+FRONT_END_URI=localhost:7002
+JWT_SECRET=they_sailed_away_in_a_sieve
